plex2/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: plex
subsets:
- addresses:
  - ip: 192.168.1.14
  ports:
  - name: plex
    port: 32400
    protocol: TCP
