plex2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
  - name: plex
    port: 80
    targetPort: 32400
    protocol: TCP
